backend/src/main/java/com/example/tutorApp/errors/QuizNotFound.java
package com.example.tutorApp.errors;

public class QuizNotFound extends RuntimeException {
    public QuizNotFound() {
        super("Quiz not found");
    }
}
